--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "max",
   "license": "ISC",
   "dependencies": {
+    "json-server": "^0.14.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "react": "^16.4.1",
