--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack -- mode production"
+    "build": "webpack -- mode production",
+    "json:server": "json-server --watch db.json"
   },
   "author": "max",
   "license": "ISC",
